--- a/assitantefr.HTML
+++ b/assitantefr.HTML
@@ -158,8 +158,8 @@ body {
   
       <!-- Navigation links -->
       <nav id="nav">
-        <a href="#home">Home</a>
-        <a href="#courses">Courses</a>
+        <a href="indexfr.html">Home</a>
+        <a href="indexfr.html#courses">Courses</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <a class="cta" href="https://t.me/elrayeneonline" target="_blank">Rejoindre l'Académie</a>
@@ -168,8 +168,8 @@ body {
         <div class="dropdown" id="languageDropdown">
           <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 Sélectionner une langue🌐  </button>
           <div class="dropdown-menu">
-            <a href="assistantematernelle.html">🇩🇿 العربية</a>
-            <a href="assitantefr.HTML">🇫🇷 Français</a>
+            <a href="guidehajj.html">🇩🇿 العربية</a>
+            <a href="guidehajjfr.html">🇫🇷 Français</a>
           </div>
         </div>
 
@@ -180,6 +180,7 @@ body {
       <!-- Call to Action -->
     </div>
   </header>
+ 
 
 
 
