--- a/guidehajj.html
+++ b/guidehajj.html
@@ -159,7 +159,7 @@ body {
       <!-- Navigation links -->
       <nav id="nav">
         <a href="index.html">الرئيسية</a>
-<a href="#courses">الدورات</a>
+<a href="index.html#courses">الدورات</a>
 <a href="#about">من نحن</a>
 <a href="#contact">اتصل بنا</a>
 <a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى الأكاديمية</a>
