--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@ body {
           ERA هي أكاديمية تدريب عبر الإنترنت تضم أكثر من 1000 طالب، وأكثر من 200 دورة، ونتائج مضمونة.
         </p>
         <div style="margin-top: 30px;">
-          <a href="#" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">ابدئ الآن</a>
-          <a href="#courses" style="margin-right: 20px; color: #6d2e8b; font-weight: bold; text-decoration: none;">المزيد من التفاصيل</a>
+          <a href="#courses" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">ابدئ الآن</a>
+          <a href="#temoignages" style="margin-right: 20px; color: #6d2e8b; font-weight: bold; text-decoration: none;">اراء متدرباتنا</a>
         </div>
       </div>
   
       <!-- الصورة والبطاقات -->
       <div style="flex: 1 1 500px; min-width: 300px; position: relative; margin-top: 40px;">
-        <img src="eleve-elearning-formation.jpg" alt="طالبة تتعلم عن بعد" style="width: 96%; max-width: 450px; border-radius: 16px; box-shadow: 0 0 20px #eee;">
+        <img src="eleve-elearning-formation.jpg" alt="طالبة تتعلم عن بعد" style="width: 100%; max-width: 450px; border-radius: 16px; box-shadow: 0 0 20px #eee;">
         
         <!-- بطاقات عائمة -->
         <div style="position: absolute; top: 10%; right: -20px; background: white; border-radius: 12px; padding: 10px 15px; box-shadow: 0 0 10px rgba(0,0,0,0.1); font-size: 0.9rem;">
@@ -142,8 +142,8 @@ body {
     <!-- الإحصائيات -->
     <div style="max-width: 1000px; margin: 60px auto 0; display: flex; flex-wrap: wrap; justify-content: space-around; text-align: center; color: #6d2e8b;">
       <div>
-        <h3 style="font-size: 2rem;">+200</h3>
-        <p>دورة متاحة</p>
+        <h3 style="font-size: 2rem;">دورات</h3>
+        <p> اكثر طلبا </p>
       </div>
       <div>
         <h3 style="font-size: 2rem;">+1000</h3>
@@ -370,7 +370,7 @@ body {
       <p style="font-size: 1.2rem; margin-top: 20px;">
         لديك سؤال؟ تحتاج إلى معلومات؟ فريقنا مستعد للاستجابة لك عبر تيليغرام.
       </p>
-      <a href="https://t.me/elrayeneonline" target="_blank" 
+      <a href="https://t.me/coach_rayene" target="_blank" 
          style="display: inline-block; margin-top: 30px; padding: 15px 30px; 
                 background-color: #d36bd8; color: white; border-radius: 8px; 
                 text-decoration: none; font-weight: bold;">
