--- a/indexfr.html
+++ b/indexfr.html
@@ -76,8 +76,8 @@
         ERA est une école de formation en ligne avec +1000 étudiantes, +200 formations, et des résultats garantis.
       </p>
       <div style="margin-top: 30px;">
-        <a href="https://t.me/elrayeneonline" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">Commencer</a>
-        <a href="#courses" style="margin-left: 20px; color: #6d2e8b; font-weight: bold; text-decoration: none;">En savoir plus</a>
+        <a href="#courses" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">Commencer</a>
+        <a href="#temoignages" style="margin-left: 20px; color: #6d2e8b; font-weight: bold; text-decoration: none;">Avis de nos stagiaires</a>
       </div>
     </div>
 
@@ -103,8 +103,9 @@
   <!-- Stats Row -->
   <div style="max-width: 1000px; margin: 60px auto 0; display: flex; flex-wrap: wrap; justify-content: space-around; text-align: center; color: #6d2e8b;">
     <div>
-      <h3 style="font-size: 2rem;">+200</h3>
-      <p>Formations disponibles</p>
+      <h3 style="font-size: 2rem;">Formations</h3>
+<p>Les plus demandées</p>
+
     </div>
     <div>
       <h3 style="font-size: 2rem;">+1000</h3>
@@ -323,7 +324,7 @@
       <p style="font-size: 1.2rem; margin-top: 20px;">
         Une question ? Un besoin d'information ? Notre équipe est à votre écoute sur Telegram.
       </p>
-      <a href="https://t.me/elrayeneonline" target="_blank" 
+      <a href="https://t.me/coach_rayene" target="_blank" 
          style="display: inline-block; margin-top: 30px; padding: 15px 30px; 
                 background-color: #d36bd8; color: white; border-radius: 8px; 
                 text-decoration: none; font-weight: bold;">
