--- a/secretariatfr.html
+++ b/secretariatfr.html
@@ -139,7 +139,6 @@ body {
     </style>
 </head>
 <body>
-
   <header>
     <div class="header-container">
       <!-- Logo -->
@@ -158,8 +157,8 @@ body {
   
       <!-- Navigation links -->
       <nav id="nav">
-        <a href="#home">Home</a>
-        <a href="#courses">Courses</a>
+        <a href="indexfr.html">Home</a>
+        <a href="indexfr.html#courses">Courses</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <a class="cta" href="https://t.me/elrayeneonline" target="_blank">Rejoindre l'Académie</a>
@@ -168,8 +167,8 @@ body {
         <div class="dropdown" id="languageDropdown">
           <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 Sélectionner une langue🌐  </button>
           <div class="dropdown-menu">
-            <a href="secrétariat.html">🇩🇿 العربية</a>
-<a href="secretariatfr.html">🇫🇷 Français</a>
+            <a href="guidehajj.html">🇩🇿 العربية</a>
+            <a href="guidehajjfr.html">🇫🇷 Français</a>
           </div>
         </div>
 
