--- a/TOT.html
+++ b/TOT.html
@@ -122,10 +122,6 @@ body {
       margin-left: 10px;
     }
 
-    .cta {
-      margin-top: 20px;
-    }
-
     .cta a {
       text-decoration: none;
       background-color: #6d2e8b;
@@ -139,7 +135,6 @@ body {
     </style>
 </head>
 <body>
-
   <header> 
     <div class="header-container">
       <!-- Logo -->
@@ -162,7 +157,9 @@ body {
 <a href="index.html#courses">الدورات</a>
 <a href="#about">من نحن</a>
 <a href="#contact">اتصل بنا</a>
-<a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى الأكاديمية</a>
+<a class="cta" href="https://t.me/coach_rayene" target="_blank">انضم إلى الأكاديمية</a> 
+<a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى مجتمعنا </a> 
+
 
         <!-- Language Selector -->
        
@@ -170,8 +167,8 @@ body {
 <div class="dropdown" id="languageDropdown">
 <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 اختر اللغة</button>
 <div class="dropdown-menu">
-<a href="TOT.html">🇩🇿 العربية</a>
-<a href="TOTfr.html">🇫🇷 Français</a>
+<a href="index.html">🇩🇿 العربية</a>
+<a href="indexfr.html">🇫🇷 Français</a>
 </div>
 </div>
 
@@ -181,7 +178,6 @@ body {
       <!-- Call to Action -->
     </div>
   </header>
-
 
 
 
