--- a/assistantematernelle.html
+++ b/assistantematernelle.html
@@ -13,10 +13,6 @@
   text-align: right;
 }
 
-body {
-     font-family: poppins sans-serif;
-     font-weight: 500;
-    }
 
 .language-selector {
       position: relative;
@@ -122,9 +118,7 @@ body {
       margin-left: 10px;
     }
 
-    .cta {
-      margin-top: 20px;
-    }
+
 
     .cta a {
       text-decoration: none;
@@ -161,7 +155,9 @@ body {
 <a href="index.html#courses">الدورات</a>
 <a href="#about">من نحن</a>
 <a href="#contact">اتصل بنا</a>
-<a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى الأكاديمية</a>
+<a class="cta" href="https://t.me/coach_rayene" target="_blank">انضم إلى الأكاديمية</a> 
+<a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى مجتمعنا </a> 
+
 
         <!-- Language Selector -->
        
@@ -169,8 +165,8 @@ body {
 <div class="dropdown" id="languageDropdown">
 <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 اختر اللغة</button>
 <div class="dropdown-menu">
-<a href="assistantematernelle.html">🇩🇿 العربية</a>
-<a href="assitantefr.HTML">🇫🇷 Français</a>
+<a href="index.html">🇩🇿 العربية</a>
+<a href="indexfr.html">🇫🇷 Français</a>
 </div>
 </div>
 
