--- a/assitantefr.HTML
+++ b/assitantefr.HTML
@@ -140,47 +140,43 @@ body {
 </head>
 <body>
 
-  <header>
+  <header> 
     <div class="header-container">
       <!-- Logo -->
       <div class="logo">
-        <a href="indexfr.html">
-          <img src="logo.png" alt="Logo El Rayene Academy">
+        <a href="index.html">
+          <img src="logo.png" alt="Logo de l'Académie El Rayene">
         </a>
       </div>
   
-      <!-- Hamburger menu for mobile -->
+      <!-- Menu hamburger pour mobile -->
       <div class="hamburger" id="hamburger">
         <span></span>
         <span></span>
         <span></span>
       </div>
   
-      <!-- Navigation links -->
+      <!-- Liens de navigation -->
       <nav id="nav">
-        <a href="indexfr.html">Home</a>
-        <a href="indexfr.html#courses">Courses</a>
-        <a href="#about">About</a>
+        <a href="index.html">Accueil</a>
+        <a href="index.html#courses">Formations</a>
+        <a href="#about">À propos</a>
         <a href="#contact">Contact</a>
-        <a class="cta" href="https://t.me/elrayeneonline" target="_blank">Rejoindre l'Académie</a>
-        
-        <!-- Language Selector -->
+        <a class="cta" href="https://t.me/coach_rayene" target="_blank">Rejoindre l’académie</a> 
+        <a class="cta" href="https://t.me/elrayeneonline" target="_blank">Rejoindre notre communauté</a>
+  
+        <!-- Sélecteur de langue -->
         <div class="dropdown" id="languageDropdown">
-          <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 Sélectionner une langue🌐  </button>
+          <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 Choisir la langue</button>
           <div class="dropdown-menu">
-            <a href="guidehajj.html">🇩🇿 العربية</a>
-            <a href="guidehajjfr.html">🇫🇷 Français</a>
+            <a href="index.html">🇩🇿 Arabe</a>
+            <a href="indexfr.html">🇫🇷 Français</a>
           </div>
         </div>
-
-
-
       </nav>
-  
-      <!-- Call to Action -->
     </div>
   </header>
- 
+  
 
 
 
