--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
   text-align: right;
 }
 
-body {
-  font-family: "IBM Plex Sans Arabic", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-}
+
 .language-selector {
       position: relative;
     }
@@ -81,7 +77,9 @@ body {
 <a href="#courses">الدورات</a>
 <a href="#about">من نحن</a>
 <a href="#contact">اتصل بنا</a>
-<a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى الأكاديمية</a>
+<a class="cta" href="https://t.me/coach_rayene" target="_blank">انضم إلى الأكاديمية</a> 
+<a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى مجتمعنا </a> 
+
 
             <!-- Language Selector -->
            
@@ -112,7 +110,7 @@ body {
           مع أكاديمية الريان
         </h1>
         <p style="font-size: 1.1rem; color: #555;">
-          ERA هي أكاديمية تدريب عبر الإنترنت تضم أكثر من 1000 طالب، وأكثر من 200 دورة، ونتائج مضمونة.
+          ERA هي أكاديمية تدريب عبر الإنترنت تضم أكثر من 1000 طالب،   دورات اكثر طلبا ونتائج مضمونة.
         </p>
         <div style="margin-top: 30px;">
           <a href="#courses" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">ابدئ الآن</a>
@@ -130,7 +128,7 @@ body {
         </div>
   
         <div style="position: absolute; bottom: 20%; right: -20px; background: white; border-radius: 12px; padding: 10px 15px; box-shadow: 0 0 10px rgba(0,0,0,0.1); font-size: 0.9rem;">
-          📚 +200 دورة تدريبية
+          دورات اكثر طلبا
         </div>
   
         <div style="position: absolute; top: 30%; left: 0px; background: white; border-radius: 12px; padding: 10px 15px; box-shadow: 0 0 10px rgba(0,0,0,0.1); font-size: 0.9rem;">
