--- a/guidehajj.html
+++ b/guidehajj.html
@@ -122,10 +122,6 @@ body {
       margin-left: 10px;
     }
 
-    .cta {
-      margin-top: 20px;
-    }
-
     .cta a {
       text-decoration: none;
       background-color: #6d2e8b;
@@ -162,7 +158,9 @@ body {
 <a href="index.html#courses">الدورات</a>
 <a href="#about">من نحن</a>
 <a href="#contact">اتصل بنا</a>
-<a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى الأكاديمية</a>
+<a class="cta" href="https://t.me/coach_rayene" target="_blank">انضم إلى الأكاديمية</a> 
+<a class="cta" href="https://t.me/elrayeneonline" target="_blank">انضم إلى مجتمعنا </a> 
+
 
         <!-- Language Selector -->
        
@@ -170,8 +168,8 @@ body {
 <div class="dropdown" id="languageDropdown">
 <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 اختر اللغة</button>
 <div class="dropdown-menu">
-<a href="guidehajj.html">🇩🇿 العربية</a>
-<a href="guidehajjfr.html">🇫🇷 Français</a>
+<a href="index.html">🇩🇿 العربية</a>
+<a href="indexfr.html">🇫🇷 Français</a>
 </div>
 </div>
 
@@ -181,7 +179,6 @@ body {
       <!-- Call to Action -->
     </div>
   </header>
-
 
       <div class="container">
         <img src="Kaaba-Tawaf-1-3166741237.jpg" alt="Couverture de la formation" class="course-image">
