--- a/indexfr.html
+++ b/indexfr.html
@@ -17,47 +17,42 @@
 <body>
 
 
-  <header>
+  <header> 
     <div class="header-container">
       <!-- Logo -->
       <div class="logo">
-        <a href="indexfr.html">
-          <img src="logo.png" alt="Logo El Rayene Academy">
+        <a href="index.html">
+          <img src="logo.png" alt="Logo de l'Académie El Rayene">
         </a>
       </div>
   
-      <!-- Hamburger menu for mobile -->
+      <!-- Menu hamburger pour mobile -->
       <div class="hamburger" id="hamburger">
         <span></span>
         <span></span>
         <span></span>
       </div>
   
-      <!-- Navigation links -->
+      <!-- Liens de navigation -->
       <nav id="nav">
-        <a href="#home">Home</a>
-        <a href="#courses">Courses</a>
-        <a href="#about">About</a>
+        <a href="index.html">Accueil</a>
+        <a href="#courses">Formations</a>
+        <a href="#about">À propos</a>
         <a href="#contact">Contact</a>
-        <a class="cta" href="https://t.me/elrayeneonline" target="_blank">Rejoindre l'Académie</a>
-        
-        <!-- Language Selector -->
+        <a class="cta" href="https://t.me/coach_rayene" target="_blank">Rejoindre l’académie</a> 
+        <a class="cta" href="https://t.me/elrayeneonline" target="_blank">Rejoindre notre communauté</a>
+  
+        <!-- Sélecteur de langue -->
         <div class="dropdown" id="languageDropdown">
-          <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 Sélectionner une langue🌐  </button>
+          <button class="dropdown-toggle" onclick="toggleDropdown()">🌐 Choisir la langue</button>
           <div class="dropdown-menu">
-            <a href="index.html">🇩🇿 العربية</a>
+            <a href="index.html">🇩🇿 Arabe</a>
             <a href="indexfr.html">🇫🇷 Français</a>
           </div>
         </div>
-
-
-
       </nav>
-  
-      <!-- Call to Action -->
     </div>
   </header>
-
 
 
 
@@ -73,7 +68,7 @@
         Avec El Rayene Academy
       </h1>
       <p style="font-size: 1.1rem; color: #555;">
-        ERA est une école de formation en ligne avec +1000 étudiantes, +200 formations, et des résultats garantis.
+        ERA est une école de formation en ligne avec +1000 étudiantes, Les formations les plus demandées, et des résultats garantis.
       </p>
       <div style="margin-top: 30px;">
         <a href="#courses" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">Commencer</a>
@@ -91,7 +86,7 @@
       </div>
 
       <div style="position: absolute; bottom: 20%; left: -20px; background: white; border-radius: 12px; padding: 10px 15px; box-shadow: 0 0 10px rgba(0,0,0,0.1); font-size: 0.9rem;">
-        📚 +200 formations
+        Formations Les plus demandées
       </div>
 
       <div style="position: absolute; top: 30%; right: 0px; background: white; border-radius: 12px; padding: 10px 15px; box-shadow: 0 0 10px rgba(0,0,0,0.1); font-size: 0.9rem;">
