--- a/indexfr.html
+++ b/indexfr.html
@@ -39,7 +39,11 @@
         <a href="#courses">Formations</a>
         <a href="#about">À propos</a>
         <a href="#contact">Contact</a>
-        <a class="cta" href="https://t.me/coach_rayene" target="_blank">Rejoindre l’académie</a> 
+
+<div style="display: flex;
+flex-direction: column;
+gap: 17px;" class="clmn">
+       <a class="cta" href="https://t.me/coach_rayene" target="_blank">Rejoindre l’académie</a> 
         <a class="cta" href="https://t.me/elrayeneonline" target="_blank">Rejoindre notre communauté</a>
   
         <!-- Sélecteur de langue -->
@@ -50,6 +54,10 @@
             <a href="indexfr.html">🇫🇷 Français</a>
           </div>
         </div>
+</div>
+   
+
+
       </nav>
     </div>
   </header>
