--- a/indexfr.html
+++ b/indexfr.html
@@ -171,7 +171,7 @@ gap: 17px;" class="clmn">
 
 
 <a href="PTOTfr.html">      <div style="flex: 1 1 calc(25% - 20px); background: white; border-radius: 16px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); overflow: hidden; min-width: 260px; max-width: 300px;">
-        <img src="Retain-Employees-Through-Training-1940690466.jpeg" alt="Formation 2" style="width: 100%; height: 180px; object-fit: cover;">
+        <img src="PTOT.jpg" alt="Formation 2" style="width: 100%; height: 180px; object-fit: cover;">
         <div style="padding: 20px; text-align: left;">
           <h3 style="font-size: 1.1rem; color: #2e003e;">PTOT</h3>
         
