--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
           ERA هي أكاديمية تدريب عبر الإنترنت تضم أكثر من 1000 طالب،   دورات اكثر طلبا ونتائج مضمونة.
         </p>
         <div style="margin-top: 30px;">
-          <a href="#courses" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">  اضغط هنا و ابدئ الآن </a>
+          <a href="#courses" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">   ابدئ الآن </a>
           <a href="#temoignages" style="margin-right: 20px; color: #6d2e8b; font-weight: bold; text-decoration: none;">اراء متدرباتنا</a>
+          <br><br><br><a href="https://t.me/coach_rayene" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">  اضغط هنا للتسجيل </a>
+        
         </div>
       </div>
   
