--- a/indexfr.html
+++ b/indexfr.html
@@ -81,6 +81,8 @@ gap: 17px;" class="clmn">
       <div style="margin-top: 30px;">
         <a href="#courses" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">Commencer</a>
         <a href="#temoignages" style="margin-left: 20px; color: #6d2e8b; font-weight: bold; text-decoration: none;">Avis de nos stagiaires</a>
+        <br><br><br><a href="https://t.me/coach_rayene" style="padding: 12px 24px; background-color: #6d2e8b; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">Cliquez ici pour vous inscrire</a>
+        
       </div>
     </div>
 
