--- a/secrétariat.html
+++ b/secrétariat.html
@@ -236,7 +236,7 @@ body {
           </div>
     
           <div class="cta">
-            <a href="https://t.me/coach_rayene">انضم الآن إلى الأكاديمية</a>
+            <a href="https://t.me/coach_rayene">  اضغط هنا للانضمام </a>
           </div>
         </div>
       </div>
