--- a/assistantematernelle.html
+++ b/assistantematernelle.html
@@ -229,7 +229,7 @@
           </div>
     
           <div class="cta">
-            <a href="https://t.me/coach_rayene">انضم الآن إلى الأكاديمية</a>
+            <a href="https://t.me/coach_rayene">  اضغط هنا للانضمام </a>
           </div>
         </div>
       </div>
